<resources>
    <string name="app_name">imcapplication</string>
    <string name="hello_world_small">Hello World!!!!</string>
    <string name="hi_radiobuton">Olá, RadioButon</string>
    <string name="hi_checkbox">Olá, CheckBox</string>
    <string name="imc">IMC</string>
    <string name="hint_peso">Peso (ex: 65.8kg)</string>
    <string name="hint_altura">Altura (ex. 1.70m)</string>
    <string name="calcular">CALCULAR</string>
</resources>